# python-project-83

./: .env  .gitignore  Makefile  README.md  build.sh  database.sql  pyproject.toml  sonar-project.properties
.github/workflows/: python-ci.yml  sonarcloud.yml
page_analyzer/: app.py  db.py  html_parser.py  url_utils.py
page_analyzer/templates/: base.html  index.html
page_analyzer/templates/urls/: index.html  show.html
